# AI_coding

./: README.md
TextRPG/: TextRPG.sln
TextRPG/TextRPG/: CMakeLists.txt  Command.cpp  Command.h  Game.cpp  Game.h  OllamaClient.cpp  OllamaClient.h  Player.cpp  Player.h  TextRPG.vcxproj  main.cpp
